Add unique4j to make the app only run once